# bluepoint

./: .gitignore  AUTHORS  ChangeLog  LICENSE  M2  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.preview.html  aa  bb  bdec2  bdec2.c  benc2  benc2.c  bencbdec  bencbdec.c  block_blue2  bluemac.h  bluepoint.1  bluepoint.c  bluepoint.h  bluepoint.js  bluepoint.php  bluepoint.pl  bluepoint.tgz  bluepoint2.c  bluepoint2.h  bluepoint3.c  bluetest.py  clean.err  clean.out  config.h  config.status  configure  configure.ac  decrypt_blue  (+25 more)
.deps/: bluepoint.Po  bluepoint2.Po  bluepoint3.Po
autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.2  traces.3
bluepy/: aa  bb  buildme.py  buildme3.py  cc
encrypt/: Thumbs.db  bb.bb  everything.html  mime.pl  q
garbage/: Thumbs.db  sample-order.html
graphics/: Backup_of_Graphic1.cdr  Backup_of_Graphic2.cdr  Backup_of_Graphic3.cdr  Backup_of_Graphic4.cdr  Backup_of_Graphic5.cdr  Graphic1.cdr  Graphic2.cdr  Graphic3.cdr  Graphic4.cdr  Graphic5.cdr  Thumbs.db  about.html  bluepoint.c  demo.html  down.html  index.html  license.html  mime.js  screen.xcf  study.html  support.js  template.html  test_blue  test_blue.c  test_blue.html  test_blue.pl  testbpoint.html  untitled00.txt
graphics/cpt/: new-1.cpt  new-2.cpt  new-3.cpt
graphics/encrypt/: aa.aa  decrypt.pl  test.pl  testcrypt.pl  xcrypt.pl
study/: bdec.c  blueencrypt.c  decrypt_blue2  decrypt_blue3  encrypt_blue  encrypt_blue3.c  tread2  tread2.c
